# ssat

./: .env.example  .gitignore  LLM.md  README.md  cleanup_ai_generated_content.sql  minimax_all_questions.txt  preview_cleanup_ai_generated_content.sql  pyproject.toml  pyrightconfig.json
backend/: .dockerignore  .env.example  Dockerfile  NEW_ARCHITECTURE.md  README.md  check_data_integrity.sql  pyproject.toml  pytest.ini  test_new_architecture.py  test_official_ssat.py
backend/app/: __init__.py  auth.py  content_generators.py  core_models.py  generator.py  llm.py  main.py  main_backup.py  settings.py  specifications.py  util.py
backend/app/config/: __init__.py  app_config.py
backend/app/models/: __init__.py  base.py  enums.py  requests.py  responses.py  user.py
backend/app/routers/: __init__.py  admin.py  generation.py  health.py  user.py
backend/app/services/: __init__.py  ai_content_service.py  content_generation_service.py  daily_limit_service.py  database.py  embedding_service.py  job_manager.py  llm_service.py  pool_response_converter.py  pool_selection_service.py  question_service.py  ssat_test_service.py  training_examples_service.py  unified_content_service.py  user_service.py
backend/core/: __init__.py  database_manager.py  image_processor.py  prompt_generator.py
backend/scripts/: README.md  batch_create_prompts.py  image_based_prompts.json  image_descriptions.json  single_create_prompt.py  upload_image_prompts.py  writing_prompts_tobe_saved.json
backend/tests/: README.md  conftest.py  helpers.py  test_admin_llm.py  test_user_pool.py
docs/: AUTH_SETUP.md  DEPLOY.md  EMAIL_TEMPLATES.md  FRONTEND_ENVIRONMENT_SETUP.md  FRONTEND_LOGGING_STRATEGY.md  HEALTH_CHECK_IMPROVEMENTS.md  LLM.md  PAYMENT_IMPLEMENTATION_PLAN.md  POOL_IMPLEMENTATION.md  PRODUCTION_CHECKLIST.md  QUALITY_IMPROVEMENTS.md  SUPABASE_SETUP.md
frontend/: .env.example  .gitignore  ENVIRONMENT_SETUP.md  README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: DailyLimitsDisplay.tsx  Footer.tsx  Header.tsx  HomePage.tsx  LayoutWrapper.tsx  ProgressiveTestGenerator.tsx  (+4 more)
scripts/: README.md  extract_pdf_text.py  math_problems.sql  math_questions.json  requirements.txt  set_admin_user.sql  test_connection.py  upload_data.py
sql/: ai_generated_schema.sql  clear_tables.sql  clear_unused.sql  comprehensive_statistics.sql  daily_limits_schema.sql  hybrid_functions_clean.sql  migrate_training_to_pool.sql  quality_check.sql  schema.sql  user_question_usage_schema.sql  user_schema.sql
src/: generate_questions.py  main.py
src/docs/: Design.md  GIT.md  POETRY.md
src/ssat/: config.py  generator.py  llm.py  models.py  pdf.py  supabase.sql
src/tests/: test_llm.py
(+54 files in other folders)
