[project]
name = "ssat"
version = "0.1.0"
description = "SSAT question generator for elementary level using AI"
authors = [
    {name = "rong2ren",email = "98350815+rong2ren@users.noreply.github.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pymupdf (>=1.25.5,<2.0.0)",
    "supabase (>=2.15.1,<3.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "transformers (>=4.51.3,<5.0.0)",
]
packages = [{include = "ssat", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
